// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip should render correctly 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="Open tooltip" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when close title is set 1`] = `
<m-popup open="open" placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="test close" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" aria-expanded="true" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">test close</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when close-button is false 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="Open tooltip" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when disabled 1`] = `
<m-popup placement="bottom" disabled="disabled" close-on-backdrop="true" class="m-tooltip m--is-disabled">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="Open tooltip" disabled="disabled" button-size="22px" aria-controls="mTooltip-uuid-controls" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when is open 1`] = `
<m-popup open="open" placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="Close tooltip" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" aria-expanded="true" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when mode is text 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <router-link to="[object Object]" tabindex="1" event="click" slot="trigger" id="mTooltip-uuid" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" class="m-link m-tooltip__link m--is-unvisited"> <span class="m-link__text">Link</span> </router-link>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body">Tooltip text</div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly when open title is set 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="test open" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body"></div>
    </div>
</m-popup>
`;

exports[`tooltip should render correctly with default slot 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-tooltip">
    <m-icon-button slot="trigger" id="mTooltip-uuid" icon-name="m-svg__information" title="Open tooltip" button-size="22px" aria-haspopup="true" aria-controls="mTooltip-uuid-controls" class="m-tooltip__icon"></m-icon-button>
    <div id="mTooltip-uuid-controls" aria-labelledby="mTooltip-uuid" class="m-tooltip__body-container m--is-default-size m--has-close-button">
        <m-icon-button skin="link" icon-size="14px" class="m-tooltip__close-button">Close tooltip</m-icon-button>
        <div class="m-tooltip__body">Tooltip text</div>
    </div>
</m-popup>
`;
